--- a/2_igniting_our_app/package.json
+++ b/2_igniting_our_app/package.json
@@ -7,5 +7,8 @@
     "test": "jest"
   },
   "author": "Jai Jain",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel": "^2.12.0"
+  }
 }
