--- a/2_igniting_our_app/package.json
+++ b/2_igniting_our_app/package.json
@@ -9,6 +9,11 @@
   "author": "Jai Jain",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
