--- a/4_show_me_the_code/package.json
+++ b/4_show_me_the_code/package.json
@@ -15,6 +15,7 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "nodemon": "^3.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
