--- a/7_finding_the_path/package.json
+++ b/7_finding_the_path/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "nodemon": "^3.1.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "browserslist": [
     "last 2 versions"
