--- a/12_lets_build_our_store/package.json
+++ b/12_lets_build_our_store/package.json
@@ -15,9 +15,11 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "nodemon": "^3.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1"
   },
   "browserslist": [
