--- a/12_lets_build_our_store/package.json
+++ b/12_lets_build_our_store/package.json
@@ -2,7 +2,6 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is namaste react.",
-  "main": "App.js",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -16,6 +15,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "@swc/helpers": "^0.5.11",
     "nodemon": "^3.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
